First commit to github

--- a/Cog/App.config
+++ b/Cog/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings file="C:\Users\nhill\Dropbox\Settings Files\cog.settings.config">
+    <add key="FileDropPath" value="C:\Users\nhill\Documents\Cognitive\Cognitive_FileDrop\" />
+    <add key="FileDropArchivePath" value="C:\Users\nhill\Documents\Cognitive\Cognitive_FileDrop_Archive" />
+    <add key="BatchSize" value="1" />
+    <add key="Sentiment_Indifferent" value="0.6" />
+    <add key="Sentiment_Negative" value="0.4" />
+  </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
