--- a/Cog/App.config
+++ b/Cog/App.config
@@ -6,6 +6,12 @@
     <add key="BatchSize" value="1" />
     <add key="Sentiment_Indifferent" value="0.6" />
     <add key="Sentiment_Negative" value="0.4" />
+    <add key="MaxDocumentSizeInCharacters" value="5000" />
+    <!--
+    Add your API keys here (or put them in an external file as per the appsettings element above.
+   <add key="TextAnalyticsSubscriptionKey" value="Your TextAnalyticsSubscriptionKey" />
+   <add key ="BingSpeechApiSubscriptionKey" value ="Your BingSpeechApiSubscriptionKey"/>
+    -->
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
