re-introduced twitter. drop a file of hashtags with the extension .twitter to trigger processing.  Uncommented old twitter code.  Moved twitter secrets to external configuration file and regenerated secrets.

--- a/Cog/App.config
+++ b/Cog/App.config
@@ -7,6 +7,7 @@
     <add key="Sentiment_Indifferent" value="0.6" />
     <add key="Sentiment_Negative" value="0.4" />
     <add key="MaxDocumentSizeInCharacters" value="5000" />
+    <add key="TwitterOAuthUrl" value="https://api.twitter.com/oauth2/token" />
     <!--
     Add your API keys here (or put them in an external file as per the appsettings element above.
    <add key="TextAnalyticsSubscriptionKey" value="Your TextAnalyticsSubscriptionKey" />
